kubernetes/gitea/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-db
  labels:
    app: gitea
spec:
  ports:
    - port: 5432
  selector:
    app: gitea
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1
        ports:
        - containerPort: 2222
        - containerPort: 3000
        volumeMounts:
        - name: gitea
          mountPath: "/data"
      - name: db
        image: postgres:9.6
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: gitea-db
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: gitea
        persistentVolumeClaim:
          claimName: gitea
      - name: gitea-db
        persistentVolumeClaim:
          claimName: gitea-db
      - name: gitea-config
        configMap:
          name: gitea-config
