kubernetes/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea

spec:
  ports:
    - port: 3000
      name: http
  externalIPs:
  - 10.10.1.185
  selector:
    app: gitea
