kubernetes/gitea/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`git.kurz.site`) || (Host(`git2.kurz.site`)
    kind: Rule
    services:
    - name: gitea
      port: 3000
